# jarvis

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  config.local.yaml.example  config.yaml  profile.example.yaml  profile.yaml  pyproject.toml  run.sh
jarvis/: __init__.py  _config.py  deliver.py  state.py
jarvis/fetchers/: __init__.py  arxiv.py  youtube.py
openspec/changes/archive/2026-05-05-bootstrap-jarvis-v1/: tasks.md
openspec/changes/archive/2026-05-06-track-config-add-init/: tasks.md
openspec/changes/archive/2026-05-23-tighten-cross-day-dedup/: design.md  tasks.md
openspec/changes/bootstrap-jarvis-v1/: design.md  proposal.md  tasks.md
openspec/changes/bootstrap-jarvis-v1/specs/content-fetching/: spec.md
openspec/changes/tighten-cross-day-dedup/: proposal.md  tasks.md
openspec/changes/tighten-cross-day-dedup/specs/pipeline-orchestration/: spec.md
openspec/changes/tighten-cross-day-dedup/specs/seen-tracking/: spec.md
openspec/changes/track-config-add-init/: design.md  proposal.md  tasks.md
openspec/changes/track-config-add-init/specs/credential-bootstrap/: spec.md
openspec/changes/track-config-add-init/specs/repo-bootstrap/: spec.md
openspec/specs/briefing-synthesis/: spec.md
openspec/specs/content-fetching/: spec.md
openspec/specs/credential-bootstrap/: spec.md
openspec/specs/pipeline-orchestration/: spec.md
openspec/specs/repo-bootstrap/: spec.md
openspec/specs/seen-tracking/: spec.md
openspec/specs/slack-delivery/: spec.md
prompts/: daily_brief.md
samples/: example_briefing.md
scripts/: init.sh
(+6 files in other folders)
