[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jarvis"
version = "0.1.0"
description = "A personal daily-briefing automation that posts a curated Slack message every morning."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
  "feedparser>=6.0",
  "httpx>=0.27",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "pre-commit>=3.7",
]

[tool.hatch.build.targets.wheel]
packages = ["jarvis"]
